src/objects/Outstanding_Recommendation__c.object
<CustomObject>
    <description>Recommendations and fixes made by Support/Engineering are logged in this object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Recommendations</relationshipLabel>
        <relationshipName>Outstanding_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Outstanding Recommendations</relationshipLabel>
        <relationshipName>Outstanding_Recommendations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Email__c</fullName>
        <label>Case Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Velocity_Type__c</fullName>
        <label>Case Velocity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Velocity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Velocity</label>
        <referenceTo>Pachinko_Case_Type__c</referenceTo>
        <relationshipLabel>Outstanding Recommendations</relationshipLabel>
        <relationshipName>Outstanding_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Outstanding Recommendations</relationshipLabel>
        <relationshipName>Outstanding_Recommendations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outstanding Recommendations</relationshipLabel>
        <relationshipName>Outstanding_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outstanding Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rec-{00000000}</displayFormat>
        <label>Rec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstanding Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>